se modificaron la actividad para guardar los datos en la bd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="run400m">400m</string>
     <string name="chooseRun">Elige la distancia</string>
     <string name="enterdata">Ingres los datos de la carrera</string>
+    <string name="guardar">Guardar</string>
 </resources>
