Modifique menu un poco, falta arreglar el history

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -13,4 +13,5 @@
     <string name="Pesas">Weightlifting</string>
     <string name="Fuerza">Strength</string>
     <string name="Mas">Plus</string>
+    <string name="Registro">History</string>
 </resources>
