ya hay grafica pero no esta correcta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="enterdata">Ingres los datos de la carrera</string>
     <string name="guardar">Guardar</string>
     <string name="Registro">Registro</string>
+    <string name="Grafica">Grafica</string>
 </resources>
